--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <div class="left-picture-panel">
-        <img src="images/bun.jpg" alt="">
+
+    <div class="left-picture-panel">        
+        <div class="logo">
+           <img src="images/croissant.png">
+           <span>Nisu</span>
+        </div>
     </div>
+
     <div class="right-form-panel">
         <div class="right-top-panel">
             <p>This is not a real online service! You know you need something <br> like this in your life to help you realize your deepest dreamns. <br><br> Sign up now to get started.</p>
@@ -23,41 +28,41 @@
                 <fieldset>
                     
                     <div id="first_name">
-                        <label for="first_name">FIRST NAME:</label>
+                        <label for="first_name">FIRST NAME:<br></label>
                             <input type="text" id="first_name" name="user_first_name">
                     </div>
 
                     <div id="last_name">
-                        <label for="last_name">LAST NAME:</label>
+                        <label for="last_name">LAST NAME:<br></label>
                             <input type="text" id="last_name" name="user_last_name">
                     </div>
 
                     <div id="email">
-                        <label for="email">EMAIL:</label>
+                        <label for="email">EMAIL:<br></label>
                             <input type="email" id="email" name="user_email">
                     </div>
 
                     <div id="tel">
-                        <label for="phone_number">PHONE NUMBER:</label>
+                        <label for="phone_number">PHONE NUMBER:<br></label>
                             <input type="tel" id="phone_number" name="user_tel">
                     </div>
 
                     <div id="password">
-                        <label for="password">PASSWORD:</label>
+                        <label for="password">PASSWORD:<br></label>
                             <input type="password" id="password" name="user_password">
                     </div>
                     <div id="confirm_password">
-                        <labeL for="confirm_password">CONFIRM PASSWORD:</labeL>
+                        <labeL for="confirm_password">CONFIRM PASSWORD:<br></labeL>
                             <input type="password" id="confirm_password" name="user_confirm_password">
                     </div>
 
                 </fieldset>
-            </form>
-        </div>
-
-        <div class="right-bottom-panel">
-            <h1>placeholder bottom</h1>
-        </div>
+            </div>
+            
+            <div class="right-bottom-panel">
+                <button type="submit">Create Account</button>
+            </div>
+        </form>
     </div>
 </body>
 </html>
