almost complete. needs some optimizing

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             
             <div class="right-bottom-panel">
                 <button type="submit">Create Account</button>
+
+                <div class="login">
+                    Already have a account? <a href="testtest">log in</a>
+                </div>
+                
             </div>
         </form>
     </div>
